# OXRPresentationProxy

./: .cursorignore  CMakeLists.txt  pyproject.toml  readme.md  setup.py  test.py
python_extension/: CMakeLists.txt  PythonBindings.cpp
python_extension/OXRPresentationPython/: __init__.py  __init__.pyi
src/: CMakeLists.txt  Context.cpp  Context.h  Controllers.cpp  Controllers.h  CudaInterop.cpp  CudaInterop.h  CudaTestPattern.cu  CudaTestPattern.h  DataBuffer.cpp  DataBuffer.h  Headset.cpp  Headset.h  ImageBuffer.cpp  ImageBuffer.h  Main.cpp  MeshData.cpp  MeshData.h  MirrorView.cpp  MirrorView.h  Model.h  Pipeline.cpp  Pipeline.h  RenderProcess.cpp  RenderProcess.h  RenderTarget.cpp  RenderTarget.h  Renderer.cpp  Renderer.h  Util.cpp  Util.h
